# ame-team

./: .gitignore  README.md  pyproject.toml  requirements.txt  tips.md
ame/settings/: base.py
ame_team/settings/: base.py
automation_matrix/: __init__.py  error_handler.py
automation_matrix/formatting/: output_notes.md
automation_matrix/processing/: ai_output.py  processor.py  processor_notes.md
automation_matrix/processing/dev/: action_post_processing.py  action_post_processing_from_oai.py  post_processors.py  single_purpose_extractions.py
automation_matrix/processing/image/: image_ocr_with_table_support.py  image_to_base64.py  image_to_base64_async.py
automation_matrix/processing/json/: csv_to_json_util.py  matrix_explorers.py  tables_to_json.py
automation_matrix/processing/markdown/: classifier.py  convert_md_to_docx.py  markdown_to_docx.py  organizer.py
automation_matrix/processing/other/: url_parsing_util.py
automation_matrix/processing/output_processors/: ai_output_classifier.py  classifier.py  markdown_helper.py  processor.py  response_processing.py
automation_matrix/processing/pdf/: ExtractTablesAndUpload.py  PyMuPDF.py
automation_matrix/workflow/: __init__.py  conductor.py  execution.py
common/: __init__.py
common/sample_data/: data_access.py
common/utils/: fancy_prints.py  json_utils.py  matrix_mimic.py  mimic_user_input.py
sample_data/: __init__.py
sample_data/automation_matrix/: ama_ai_output_samples.py  sample_openai_responses.py  sample_processing_data.py  sample_text_full_outline.txt  sample_text_short.txt
(+28 files in other folders)
